* Fix {bz: 3175}: IE6 really doesn't like all these style="display:none"   inline CSSs, so refactoring them out to a global style prevented the bad   interaction with the #mainWrap expression() rule with screen.ie.css and   hence avoids a performance bottleneck.

--- a/nlw/share/skin/s3/css/screen.css
+++ b/nlw/share/skin/s3/css/screen.css
@@ -4380,3 +4380,7 @@ body#dashBoard div#controls div#controlsRight ul {
     border-bottom: 1px solid black;
     border-top: none;
 }
+
+table.st-ss th span {
+    display: none !important;
+}
